<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">NMP</string>
    <string name="open">Open</string>
    <string name="title_update">Update item</string>
    <string name="title_show">Show item</string>
    <string name="title_delete">Delete item</string>
    <string name="title_select">Select item</string>
    <string name="title_clear">Clear all</string>
    <string name="title_import">Import datal</string>
    <string name="title_settings">Settings</string>
    <string name="title_property">Property</string>
    <string name="title_genpwd">Generate Password</string>
    <string name="enter_phrase">Secret Phrase</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="exit_twice_back">Exit when back button twice pressed.</string>
    <string name="require_label">Label required.</string>
    <string name="require_user">User ID required.</string>
    <string name="require_password">Password required.</string>
    <!-- <string name="load_error">Cannot load repository.</string> -->
    <string name="incorrect_secret_phrase">Incorrect secret phrase.</string>
    <string name="unmatched_old_phrase">Incorrect old secret phrase.</string>
    <string name="unmatched_new_phrase">Unmatched new secret phrase.</string>
    <string name="no_repository_file">No repository found.</string>
    <string name="no_import_file">No import file found.</string>
    <string name="import_error">Cannot read import file.</string>
    <string name="import_success">Imported all items. Delete import.dat for your security.</string>
    <string name="no_secret_phrase">Correct secret phrase required.</string>
    <string name="no_available_website">No available website.</string>
    <string name="create_repository_file">Created new repository.</string>
    <string name="apply_new_phrase">Applied new secret phrase.</string>
    <string name="close_error">Cannot close repository.</string>
    <string name="save_error">Cannot save repository.</string>
    <string name="dateformat_error">Invalid date format: %s</string>
    <string name="confirm_delete">Delete this item?</string>
    <string name="confirm_update">Update this item?</string>
    <string name="confirm_discard">Discard changes?</string>
    <string name="confirm_clear">All items will be completely cleared. Continue?</string>
    <string name="confirm_import">Importing data from %s. All exsiting items will be cleared. Continue?</string>
    <string name="no_external_storage">No external storage prepared.</string>
    <string name="appdir_error">Cannot create application directory on external storage.</string>
    <string name="add">Add item</string>
    <string name="passsword">Secret phrase</string>
    <string name="old_password">Old secret phrase</string>
    <string name="new_password1">New secret phrase</string>
    <string name="new_password2">New secret phrase (confirm)</string>
    <string name="clear">Clear all items</string>
    <string name="label">Label</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="hint">Hint</string>
    <string name="zero">0.</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="masked_string">**MASKED**</string>
    <string name="pref_key_external_storage">external_storage</string>
    <string name="pref_summary_external_storage">Store your privacy files at %s.</string>
    <string name="pref_title_external_storage">Use external storage</string>
     <string name="pref_key_copy_password">copy_password</string>
    <string name="pref_summary_copy_password">Copy password to clipboard: %s</string>
    <string name="pref_title_copy_password">Use password picker</string>
    <string name="url">URL</string>
    <string name="launch">Open Website</string>
    <string name="up">Move up</string>
    <string name="down">Move down</string>
    <string name="added">Created at:</string>
    <string name="updated">Updated at:</string>
    <string name="na">N/A</string>
    <string name="property">Property</string>
    <string name="content_desc">description</string>
    <string name="import_data">Import</string>
    <string name="genpwd">Generate Password</string>
    <string name="genpwd_desc">Generate Password</string>
    <string name="copy_pwd">Copy password</string>
    <string name="copy_pwd_to_clipboard">Copied your password to the clipboard. Don\'t forget to clear the clipboard for your security.</string>
    <string name="registered">Registered</string>
    <string name="registered_desc">Register Date</string>
    <string name="expire">Expire date</string>
    <string name="expire_desc">Expire Date</string>
    <string name="date_format">%1$04d/%2$02d/%3$02d</string>
    <string name="default_date">----/--/--</string>
    <string name="clear_date">Clear</string>
    <string name="clear_clipboard">Cleared clipboard.</string>
    
</resources>