<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/menu_phrase"
        android:icon="@android:drawable/ic_lock_lock"
        android:showAsAction="ifRoom|withText"
        android:title="@string/passsword">
    </item>
    <item
        android:id="@+id/menu_import"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/import_data">
    </item>
    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings">
    </item>

</menu>